--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,13 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <!-- 用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/ThemeSplash">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,8 +36,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".barChart"></activity>
-        <activity android:name=".Logistics"></activity>
+        <activity android:name=".guideInterface.MainActivity"></activity>
+        <activity android:name=".WelcomeScreen"></activity>
+        <activity android:name=".map.MapService"></activity>
+        <activity android:name=".map.MapNavi"></activity>
+        <activity android:name=".weather.Weather"></activity>
+        <activity android:name=".weather.WeatherAboutLife"></activity>
+        <activity android:name=".weather.WeatherForecast"></activity>
+        <activity android:name=".dataShow.SetData"></activity>
+        <activity android:name=".dataShow.ShowBarChart"></activity>
+        <activity android:name=".logistics.Logistics"></activity>
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -46,12 +53,6 @@
 
         <service android:name="com.amap.api.location.APSService" />
 
-        <activity android:name=".MapService" />
-        <activity android:name=".Configuration" />
-        <activity android:name=".MapNavi" />
-        <activity android:name=".Weather" />
-        <activity android:name=".WeatherAboutLife"/>
-        <activity android:name=".WeatherForecast"/>
     </application>
 
 </manifest>
